--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pandas = "^1.2.1"
 mysql-connector-python = "^8.0.23"
 PyMySQL = "^1.0.2"
 SQLAlchemy = "^1.3.23"
+lxml = "^4.7.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.800"
